--- a/package.json
+++ b/package.json
@@ -55,11 +55,9 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
-    "color": "^2.0.0",
     "hoist-non-react-statics": "^2.2.2",
     "prop-types": "^15.5.10",
-    "react-icons": "^2.2.5",
-    "react-jss": "^7.1.0"
+    "react-icons": "^2.2.5"
   },
   "peerDependencies": {
     "react": "^15.6.1",
@@ -75,17 +73,17 @@
     "test": "node ./test/collect.js && cross-env NODE_ENV=test karma start --single-run",
     "serve": "http-server -a 0.0.0.0 -p 8001 -c-1",
     "eslint": "eslint src",
-    "build:vendors:dev": "                                                      browserify                          -r react -r react-dom -r prop-types -r color -r react-jss -r theming -r hoist-non-react-statics -r classnames                       -o vendors/js/vendors.js",
-    "build:vendors:prod": "cross-env NODE_ENV=production                        browserify                          -r react -r react-dom -r prop-types -r color -r react-jss -r theming -r hoist-non-react-statics -r classnames                       -g [ loose-envify purge --NODE_ENV production ] -g uglifyify -p bundle-collapser/plugin | uglifyjs --compress=unused,dead_code --mangle -o vendors/js/vendors.min.js",
-    "build:vendors:list": "                                                     browserify                          -r react -r react-dom -r prop-types -r color -r react-jss -r theming -r hoist-non-react-statics -r classnames                       --list | node scripts/depsReporter.js",
-    "build:dev-box-ui-no-deps:dist:dev": "                                      browserify -r ./src/lib/:dev-box-ui -x react -x react-dom -x prop-types -x color -x react-jss -x theming -x hoist-non-react-statics -x classnames                       --debug -o build/dist/js/dev-box-ui-no-deps.js",
-    "build:dev-box-ui-no-deps:dist:prod": "cross-env NODE_ENV=production        browserify -r ./src/lib/:dev-box-ui -x react -x react-dom -x prop-types -x color -x react-jss -x theming -x hoist-non-react-statics -x classnames                       -g [ loose-envify purge --NODE_ENV production ] -g uglifyify -p bundle-collapser/plugin | uglifyjs --compress=unused,dead_code --mangle -o build/dist/js/dev-box-ui-no-deps.min.js",
-    "build:dev-box-ui-no-deps:list": "                                          browserify -r ./src/lib/:dev-box-ui -x react -x react-dom -x prop-types -x color -x react-jss -x theming -x hoist-non-react-statics -x classnames                       --list | node scripts/depsReporter.js",
-    "build:dev-box-ui-with-deps:dist:dev": "                                    browserify -r ./src/lib/:dev-box-ui -x react -x react-dom                                                                                                               --debug -o build/dist/js/dev-box-ui-with-deps.js",
-    "build:dev-box-ui-with-deps:dist:prod": "cross-env NODE_ENV=production      browserify -r ./src/lib/:dev-box-ui -x react -x react-dom                                                                                                               -g [ loose-envify purge --NODE_ENV production ] -g uglifyify -p bundle-collapser/plugin | uglifyjs --compress=unused,dead_code --mangle -o build/dist/js/dev-box-ui-with-deps.min.js",
-    "build:dev-box-ui-with-deps:list": "                                        browserify -r ./src/lib/:dev-box-ui -x react -x react-dom                                                                                                               --list | node scripts/depsReporter.js",
-    "build:demo": "                                                             browserify                          -x react -x react-dom -x prop-types -x color -x react-jss -x dev-box-ui                                                             --debug -o demo/js/demo.js srcDemo/demo.js",
-    "build:demo:list": "                                                        browserify                          -x react -x react-dom -x prop-types -x color -x react-jss -x dev-box-ui                                                             --list | node scripts/depsReporter.js",
+    "build:vendors:dev": "                                                      browserify                          -r react -r react-dom -r prop-types -r hoist-non-react-statics -r classnames                       -o vendors/js/vendors.js",
+    "build:vendors:prod": "cross-env NODE_ENV=production                        browserify                          -r react -r react-dom -r prop-types -r hoist-non-react-statics -r classnames                       -g [ loose-envify purge --NODE_ENV production ] -g uglifyify -p bundle-collapser/plugin | uglifyjs --compress=unused,dead_code --mangle -o vendors/js/vendors.min.js",
+    "build:vendors:list": "                                                     browserify                          -r react -r react-dom -r prop-types -r hoist-non-react-statics -r classnames                       --list | node scripts/depsReporter.js",
+    "build:dev-box-ui-no-deps:dist:dev": "                                      browserify -r ./src/lib/:dev-box-ui -x react -x react-dom -x prop-types -x hoist-non-react-statics -x classnames                       --debug -o build/dist/js/dev-box-ui-no-deps.js",
+    "build:dev-box-ui-no-deps:dist:prod": "cross-env NODE_ENV=production        browserify -r ./src/lib/:dev-box-ui -x react -x react-dom -x prop-types -x hoist-non-react-statics -x classnames                       -g [ loose-envify purge --NODE_ENV production ] -g uglifyify -p bundle-collapser/plugin | uglifyjs --compress=unused,dead_code --mangle -o build/dist/js/dev-box-ui-no-deps.min.js",
+    "build:dev-box-ui-no-deps:list": "                                          browserify -r ./src/lib/:dev-box-ui -x react -x react-dom -x prop-types -x hoist-non-react-statics -x classnames                       --list | node scripts/depsReporter.js",
+    "build:dev-box-ui-with-deps:dist:dev": "                                    browserify -r ./src/lib/:dev-box-ui -x react -x react-dom                                                                              --debug -o build/dist/js/dev-box-ui-with-deps.js",
+    "build:dev-box-ui-with-deps:dist:prod": "cross-env NODE_ENV=production      browserify -r ./src/lib/:dev-box-ui -x react -x react-dom                                                                              -g [ loose-envify purge --NODE_ENV production ] -g uglifyify -p bundle-collapser/plugin | uglifyjs --compress=unused,dead_code --mangle -o build/dist/js/dev-box-ui-with-deps.min.js",
+    "build:dev-box-ui-with-deps:list": "                                        browserify -r ./src/lib/:dev-box-ui -x react -x react-dom                                                                              --list | node scripts/depsReporter.js",
+    "build:demo": "                                                             browserify                          -x react -x react-dom -x prop-types -x dev-box-ui                                                  --debug -o demo/js/demo.js srcDemo/demo.js",
+    "build:demo:list": "                                                        browserify                          -x react -x react-dom -x prop-types -x dev-box-ui                                                  --list | node scripts/depsReporter.js",
     "build:babel:release": "babel ./src --out-dir ./build/src --ignore *.spec.js",
     "build:all": "npm run build:vendors:dev && npm run build:vendors:prod && npm run build:dev-box-ui-no-deps:dist:dev && npm run build:dev-box-ui-no-deps:dist:prod && npm run build:dev-box-ui-with-deps:dist:dev && npm run build:dev-box-ui-with-deps:dist:prod && npm run build:demo && npm run build:babel:release",
     "clean": "rimraf build/dist/js/* && rimraf build/src/* && rimraf vendors/js/* && rimraf demo/js/*"
