--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "./build/src/lib/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/catalin-enache/dev-box-ui.git"
+    "url": "https://github.com/catalin-enache/dev-box-ui-sass.git"
   },
   "files": [
     "build/"
@@ -73,6 +73,8 @@
     "test": "node ./test/collect.js && cross-env NODE_ENV=test karma start --single-run",
     "serve": "http-server -a 0.0.0.0 -p 8001 -c-1",
     "eslint": "eslint src",
+    "build:style": "node-sass src/style/style.scss build/dist/style/style.css",
+    "build:style:demo": "node-sass srcDemo/style/style.scss build/dist/style/style.css",
     "build:vendors:dev": "                                                      browserify                          -r react -r react-dom -r prop-types -r hoist-non-react-statics -r classnames                       -o vendors/js/vendors.js",
     "build:vendors:prod": "cross-env NODE_ENV=production                        browserify                          -r react -r react-dom -r prop-types -r hoist-non-react-statics -r classnames                       -g [ loose-envify purge --NODE_ENV production ] -g uglifyify -p bundle-collapser/plugin | uglifyjs --compress=unused,dead_code --mangle -o vendors/js/vendors.min.js",
     "build:vendors:list": "                                                     browserify                          -r react -r react-dom -r prop-types -r hoist-non-react-statics -r classnames                       --list | node scripts/depsReporter.js",
