--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "browserify-istanbul": "^2.0.0",
     "bundle-collapser": "^1.2.1",
     "chai": "^4.1.2",
+    "copyfiles": "^1.2.0",
     "cross-env": "^5.0.1",
     "eslint": "^4.4.1",
     "eslint-config-airbnb": "^15.1.0",
@@ -73,6 +74,7 @@
     "test": "node ./test/collect.js && cross-env NODE_ENV=test karma start --single-run",
     "serve": "http-server -a 0.0.0.0 -p 8001 -c-1",
     "eslint": "eslint src",
+    "copy:style": "copyfiles src/style/* src/style/**/* build",
     "build:style": "node-sass src/style/style.scss build/dist/style/style.css",
     "build:style:demo": "node-sass srcDemo/style/style.scss build/dist/style/style.css",
     "build:vendors:dev": "                                                      browserify                          -r react -r react-dom -r prop-types -r hoist-non-react-statics -r classnames                       -o vendors/js/vendors.js",
@@ -86,7 +88,7 @@
     "build:dev-box-ui-with-deps:list": "                                        browserify -r ./src/lib/:dev-box-ui -x react -x react-dom                                                                              --list | node scripts/depsReporter.js",
     "build:demo": "                                                             browserify                          -x react -x react-dom -x prop-types -x dev-box-ui                                                  --debug -o demo/js/demo.js srcDemo/demo.js",
     "build:demo:list": "                                                        browserify                          -x react -x react-dom -x prop-types -x dev-box-ui                                                  --list | node scripts/depsReporter.js",
-    "build:babel:release": "babel ./src --out-dir ./build/src --ignore *.spec.js",
+    "build:babel:release": "babel ./src --out-dir ./build/src --ignore *.spec.js && npm run copy:style",
     "build:all": "npm run build:vendors:dev && npm run build:vendors:prod && npm run build:dev-box-ui-no-deps:dist:dev && npm run build:dev-box-ui-no-deps:dist:prod && npm run build:dev-box-ui-with-deps:dist:dev && npm run build:dev-box-ui-with-deps:dist:prod && npm run build:demo && npm run build:babel:release",
     "clean": "rimraf build/dist/js/* && rimraf build/src/* && rimraf vendors/js/* && rimraf demo/js/*"
   }
